Implementação do método findByFilter.
